src/test/deca/syntax/invalid/provided/DeclarationVariableNonAtteinte.deca
//Description:
//  Déclaration d'une variable non atteinte
//
//Résultat:
//  Erreur syntaxique
//  ligne 12
{
if(false)
{
    int x;
}
x=3;
}
